# kvittor

./: Cargo.toml  fetch_schema.sh  flake.nix
queries/: all_receipts.graphql  receipt_details.graphql  receipts_by_sender.graphql
schemas/: kivra.json
src/: main.rs
