[package]
name = "kvittor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.87"
charming = "0.3.1"
chrono = "0.4.38"
clap = "4.5.17"
env_logger = "0.11.5"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
itertools = "0.13.0"
log = "0.4.22"
reqwest = "0.11.27"
serde = "1.0.210"
serde_json = "1.0.128"
